<resources>
    <string name="app_name">LocalieApp</string>

    <!-- Login/Registration Activity Strings -->
    <string name="welcome_message">Welcome to Localie!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="go">Go</string>
    <string name="goButton">Go</string>
    <string name="register">Register</string>
    <string name="browse_as_guest">Browse as Guest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="coupon1">coupon1.</string>
    <string name="coupon2">coupon2.</string>
    <string name="coupon3">coupon3.</string>
    <string name="coupon4">coupon4.</string>
    <string name="coupon5">coupon5.</string>
    <string name="coupon6">coupon6.</string>
    <string name="coupon7">coupon7.</string>
    <string name="coupon8">coupon8.</string>
    <string name="coupon9">coupon9.</string>
    <string name="coupon10">coupon10.</string>

    <string name="title_activity_coupon_details">CouponDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Coupon Details Page</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="back">Back</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Coupon Details Page</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="welcome_to_you_merchant_dashboard">Welcome to Your Merchant Dashboard!</string>
</resources>